#99 Adds scrollbars to popups (previously had strange layout issues)

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -30,6 +30,7 @@ a
   &.column
     height: 100%
     flex-direction: column
+    flex-wrap: wrap
 
   > *
     flex: 1
@@ -50,6 +51,9 @@ a
 .white-space-normal
   white-space: normal !important
   
+.overflow-auto
+  overflow: auto !important
+
 // Device lists
 .device-led.off
   transition: background .5s ease
